# nucleo_h7s3l8

./: .gitmodules  CMakeLists.txt  README.md  pin.md  prj.conf  west.sh
boards/: nucleo_h7s3l8.overlay
src/: aes.c  crypto.c  ecdhe.c  ecdsa.c  main.c  main.cpp  mbedtls-ecdsa-alt.c  mbedtls-ecdsa-ecdhe-alt.c  mbedtls-exp-mod-alt.c  operation.c  pka.c
src/bsp/: button.c  button.h  uart.c  uart.h
src/check/: aes.c  crypto.c  pka.c  sha.c
src/mbedtls/: crypto.c  ecdhe.c  ecdsa.c  mbedtls-aes-alt.c  mbedtls-aes.h  mbedtls-alt.h  mbedtls-curve-alt.h  mbedtls-ecdhe-alt.c  mbedtls-ecdsa-alt.c  mbedtls-ecdsa-ecdhe-alt.c  mbedtls-ecp-alt.c  mbedtls-exp-mod-alt.c  mbedtls-sha-alt.c  pka-compute.c  pka.c
src/mbedtls/check/: crypto.c  rsa.c
src/net/: certs.h  digicert.cer  digicert.pem  http.c  https.c  mqtts.c  shell.c  sntp.c  terminal.c
src/nucleo_iks01a1/: nucleo_iks01a1.c
sysbuild/: mcuboot.conf  mcuboot.overlay
